; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_framesync.c_ff_framesync_dualinput_get_writable.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_framesync.c_ff_framesync_dualinput_get_writable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_framesync_dualinput_get_writable(%struct.TYPE_6__* %0, i32** %1, i32** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %5, align 8
  store i32** %1, i32*** %6, align 8
  store i32** %2, i32*** %7, align 8
  %9 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %10 = load i32**, i32*** %6, align 8
  %11 = load i32**, i32*** %7, align 8
  %12 = call i32 @ff_framesync_dualinput_get(%struct.TYPE_6__* %9, i32** %10, i32** %11)
  store i32 %12, i32* %8, align 4
  %13 = load i32, i32* %8, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %3
  %16 = load i32, i32* %8, align 4
  store i32 %16, i32* %4, align 4
  br label %35

17:                                               ; preds = %3
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %18, i32 0, i32 0
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = load i32*, i32** %21, align 8
  %23 = getelementptr inbounds i32, i32* %22, i64 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32**, i32*** %6, align 8
  %26 = call i32 @ff_inlink_make_frame_writable(i32 %24, i32** %25)
  store i32 %26, i32* %8, align 4
  %27 = load i32, i32* %8, align 4
  %28 = icmp slt i32 %27, 0
  br i1 %28, label %29, label %34

29:                                               ; preds = %17
  %30 = load i32**, i32*** %6, align 8
  %31 = call i32 @av_frame_free(i32** %30)
  %32 = load i32**, i32*** %7, align 8
  store i32* null, i32** %32, align 8
  %33 = load i32, i32* %8, align 4
  store i32 %33, i32* %4, align 4
  br label %35

34:                                               ; preds = %17
  store i32 0, i32* %4, align 4
  br label %35

35:                                               ; preds = %34, %29, %15
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i32 @ff_framesync_dualinput_get(%struct.TYPE_6__*, i32**, i32**) #1

declare dso_local i32 @ff_inlink_make_frame_writable(i32, i32**) #1

declare dso_local i32 @av_frame_free(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
